Add vfsStream tests for \Husky\Helper\Filesystem

--- a/public/index.html
+++ b/public/index.html
@@ -4,4 +4,9 @@
 
         <h1>Welcome to my awesome Blog</h1>
 
-<p>My name is <em>ed</em></p>
+<p>My name is <em>ed</em> and this is Husky a static site generator written in PHP. 5.3+ please.</p>
+
+
+        <ul>
+
+                    </ul>
