refactor parser and template engine into own class

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,10 @@
 
 <p>My name is <em>ed</em> and this is Husky a static site generator written in PHP. 5.3+ please.</p>
 
+<h2>Now doing this with some proper abstraction</h2>
+
 
         <ul>
 
+                            <li><a href="index.md">TEST</a></li>
                     </ul>
