--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,14 @@
-<h1>Wel this is nice</h1>
+<!doctype html>
+<head>
+    <link rel="stylesheet" href="css/bootstrap-1.2.0.min.css">
+</head>
+<body>
+<div class="container">
+<h1>Well this is nice</h1>
 
         I like that and bar.
 
-        <h1>Welcome to my awesome Blog</h1>
+        <h2>Welcome to my awesome Blog</h2>
 
 <p>My name is <em>ed</em> and this is Husky a static site generator written in PHP. 5.3+ please.</p>
 
@@ -11,5 +17,10 @@
 
         <ul>
 
-                            <li><a href="index.md">TEST</a></li>
+                            <li><a href="/mnt/hgfs/ubuntuhost/husky/Husky/../assets/content/entry-two-here.html">Entry Two Here</a></li>
+                            <li><a href="/mnt/hgfs/ubuntuhost/husky/Husky/../assets/content/index.html">Index</a></li>
+                            <li><a href="/mnt/hgfs/ubuntuhost/husky/Husky/../assets/content/thoughts/here-on-things.html">Slim Framework for PHP 5</a></li>
                     </ul>
+</div>
+</body>
+
