final commit of alpha version

--- a/public/entry-two-here.html
+++ b/public/entry-two-here.html
@@ -15,11 +15,9 @@
         <h1>Well this is nice</h1>
 
         I like that and bar.
-        <h2>Welcome to my awesome Blog</h2>
+        <h2>Entry Two</h2>
 
-<p>My name is <em>ed</em> and this is Husky a static site generator written in PHP. 5.3+ please.</p>
-
-<h2>Now doing this with some proper abstraction</h2>
+<p>this is nice</p>
 
     </div>
 
